<resources>
    <string name="app_name">FeedReader3</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="feed">Manage your feed</string>
    <string name="add">Add feed</string>
    <string name="opml">Opml</string>
    <string name="ok">Ok</string>
    <string name="login_text" translatable="false">LOGIN</string>
    <string name="logo_image" translatable="false">logo_image</string>
    <string name="searchHint">Enter the link to the feed or keywords to search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titletext">TitleText</string>
    <string name="image_news">image_news</string>
    <string name="share_button">ShareButton</string>
</resources>
